syntax = "proto3";

package orders;

import "google/protobuf/timestamp.proto";

option go_package = "order-notification-service/internal/infrastructure/msg-broker/proto/gen;gen";

message OrderStatusChangedEvent {
  string order_id   = 1;
  string user_id    = 2;

  OrderStatus status = 3;

  google.protobuf.Timestamp created_at = 4;
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;

  ORDER_STATUS_PENDING     = 1;
  ORDER_STATUS_PAID        = 2;
  ORDER_STATUS_CANCELLED   = 3;
  ORDER_STATUS_ASSEMBLING  = 4;
  ORDER_STATUS_ASSEMBLED   = 5;
  ORDER_STATUS_DELIVERING  = 6;
  ORDER_STATUS_ISSUED      = 7;
}